; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_process_enabled.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_process_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_block_decoder = type { i32, i64, i32 }
%struct.pt_event = type { %struct.TYPE_4__, i64, i64 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@pte_internal = common dso_local global i32 0, align 4
@pte_bad_context = common dso_local global i32 0, align 4
@pte_noip = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_block_decoder*, %struct.pt_event*)* @pt_blk_process_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pt_blk_process_enabled(%struct.pt_block_decoder* %0, %struct.pt_event* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pt_block_decoder*, align 8
  %5 = alloca %struct.pt_event*, align 8
  store %struct.pt_block_decoder* %0, %struct.pt_block_decoder** %4, align 8
  store %struct.pt_event* %1, %struct.pt_event** %5, align 8
  %6 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %4, align 8
  %7 = icmp ne %struct.pt_block_decoder* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load %struct.pt_event*, %struct.pt_event** %5, align 8
  %10 = icmp ne %struct.pt_event* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @pte_internal, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %50

14:                                               ; preds = %8
  %15 = load %struct.pt_event*, %struct.pt_event** %5, align 8
  %16 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load i32, i32* @pte_bad_context, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %50

22:                                               ; preds = %14
  %23 = load %struct.pt_event*, %struct.pt_event** %5, align 8
  %24 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %22
  %28 = load i32, i32* @pte_noip, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %3, align 4
  br label %50

30:                                               ; preds = %22
  %31 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %4, align 8
  %32 = getelementptr inbounds %struct.pt_block_decoder, %struct.pt_block_decoder* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %30
  %36 = load i32, i32* @pte_bad_context, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %3, align 4
  br label %50

38:                                               ; preds = %30
  %39 = load %struct.pt_event*, %struct.pt_event** %5, align 8
  %40 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %4, align 8
  %45 = getelementptr inbounds %struct.pt_block_decoder, %struct.pt_block_decoder* %44, i32 0, i32 2
  store i32 %43, i32* %45, align 8
  %46 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %4, align 8
  %47 = getelementptr inbounds %struct.pt_block_decoder, %struct.pt_block_decoder* %46, i32 0, i32 0
  store i32 1, i32* %47, align 8
  %48 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %4, align 8
  %49 = getelementptr inbounds %struct.pt_block_decoder, %struct.pt_block_decoder* %48, i32 0, i32 1
  store i64 0, i64* %49, align 8
  store i32 0, i32* %3, align 4
  br label %50

50:                                               ; preds = %38, %35, %27, %19, %11
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
